--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -121,34 +121,42 @@
         </form>
     </div>
 
-    <script>
-        function togglePassword(id, icon) {
-            const input = document.getElementById(id);
-            const type = input.getAttribute('type') === 'password' ? 'text' : 'password';
-            input.setAttribute('type', type);
-            if (type === 'text') {
-                icon.classList.replace('fa-eye-slash', 'fa-eye');
-            } else {
-                icon.classList.replace('fa-eye', 'fa-eye-slash');
-            }
+<script>
+    function togglePassword(id, icon) {
+        const input = document.getElementById(id);
+        const type = input.getAttribute('type') === 'password' ? 'text' : 'password';
+        input.setAttribute('type', type);
+        if (type === 'text') {
+            icon.classList.replace('fa-eye-slash', 'fa-eye');
+        } else {
+            icon.classList.replace('fa-eye', 'fa-eye-slash');
         }
+    }
 
-        window.onload = function () {
-            const modal = document.getElementById('modalAlert');
-            if (modal) {
-                setTimeout(() => {
-                    modal.style.opacity = '0';
-                    setTimeout(() => modal.remove(), 300);
-                }, 5000);
-            }
-        };
+    // Variabel untuk menyimpan timer, agar bisa dibatalkan jika diperlukan
+    let modalTimeout;
 
-        function closeModal() {
-            const modal = document.getElementById('modalAlert');
-            if (modal) {
-                modal.remove();
-            }
+    // Fungsi untuk menutup modal dengan efek transisi
+    function closeModal() {
+        const modal = document.getElementById('modalAlert');
+        if (modal) {
+            // Hapus timer jika modal ditutup secara manual untuk menghindari duplikasi aksi
+            clearTimeout(modalTimeout);
+            modal.style.opacity = '0';
+            setTimeout(() => modal.remove(), 300);
         }
-    </script>
+    }
+
+    // Kode yang dijalankan saat halaman selesai dimuat
+    window.onload = function () {
+        const modal = document.getElementById('modalAlert');
+        if (modal) {
+            // Atur timer untuk menutup modal secara otomatis setelah 5 detik
+            modalTimeout = setTimeout(() => {
+                closeModal();
+            }, 3000);
+        }
+    };
+</script>
 </body>
 </html>
